Finish examples on interface sets

--- a/network_input.ipynb
+++ b/network_input.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### Ways of creating the new InterfaceSet\n",
     "\n",
-    "The most common way to create the interface set is barely changed from the previous version. The only difference that is that we use the `VolumeInterfaceSet` object, instead of the ??? function."
+    "The most common way to create the interface set is barely changed from the previous version. The only difference that is that we use the `VolumeInterfaceSet` object, instead of the `VolumeFactory.CVRangeVolumeSet` function."
    ]
   },
   {
@@ -252,21 +252,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a new interface for the set"
+    "### Creating a new interface for the set\n",
+    "\n",
+    "Another new feature is the ability to create a new interface for a given set. This only works for `VolumeInterfaceSet`s."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<openpathsampling.volume.CVDefinedVolume at 0x1175de090>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interface_set.new_interface(lambda_i=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<openpathsampling.volume.IntersectionVolume at 0x1175ded50>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interface_set_5.new_interface(lambda_i=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'InterfaceSet' object has no attribute 'new_interface'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We print the message of the AttributeError, but ignore the crash\n",
+    "try:\n",
+    "    interface_set_2.new_interface(lambda_i=0.5)\n",
+    "except AttributeError as e:\n",
+    "    print e"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Improving analysis due to the new interface sets"
+    "### Improving analysis due to the new interface sets\n",
+    "\n",
+    "Thanks to these new interface sets, we have the ability to identify the volume of lambda for any volume:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume = interface_set.volumes[0]\n",
+    "interface_set.get_lambda(volume)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple State Outer Interface"
+    "This makes it possible to perform analyses that were previously guesswork. For example, it used to require a complicated algorithm with several assumptions in order to obtain the value of $\\lambda$ for the outermost ensemble. Now it can be obtained with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "outermost_lambda = interface_set.get_lambda(interface_set[-1])\n",
+    "print outermost_lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple State Outer Interface\n",
+    "\n",
+    "The other main improvement in this module is the development of a better approach to handle the multiple state outer interface."
    ]
   },
   {
