Finish network_input notebook

--- a/network_input.ipynb
+++ b/network_input.ipynb
@@ -267,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "<openpathsampling.volume.CVDefinedVolume at 0x1175de090>"
+       "<openpathsampling.volume.CVDefinedVolume at 0x11176cb10>"
       ]
      },
      "execution_count": 13,
@@ -289,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "<openpathsampling.volume.IntersectionVolume at 0x1175ded50>"
+       "<openpathsampling.volume.IntersectionVolume at 0x11176ce50>"
       ]
      },
      "execution_count": 14,
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -389,31 +389,154 @@
    "source": [
     "## Multiple State Outer Interface\n",
     "\n",
-    "The other main improvement in this module is the development of a better approach to handle the multiple state outer interface."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### New object to represent MS-outer interface"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Making the MS-outer interface optional"
+    "The other main improvement in this module is the development of a better approach to handle the multiple state outer interface. The MS-outer interface itself is a somewhat confusing object; the previous input setup was even more confusing.\n",
+    "\n",
+    "First, let's remember the distinction between an interface and an ensemble. An interface is a volume of points in phase space, whereas an ensemble is a set of rules that define whether a trajectory is in or out of the ensemble. Most ensembles in TIS must begin in a specific initial ensemble. However, the MS-outer ensemble allows the trajectory to begin in any of several states. It is easiest to think of the MS-outer ensemble as the set-theoretic union of MSTIS ensembles associated with several initial states. This means that the \"interface\" is actually several volumes, which must later be associated with the combined ensemble.\n",
+    "\n",
+    "Previously, the MS-outer interface was created by implicitly assuming that certain interfaces given by the user were intended to be turned into an MS-outer interface. This could lead to confusion when one of the user's ensembles \"disappeared.\" Worse, the MS-outer interface was only created under certain specific conditions, leading in inconsistency.\n",
+    "\n",
+    "Finally, although the MS-outer ensemble can be used to facilitate replica exchange between different interface sets, the better way of doing that is with a state-swap move. The changes in this module make the MS-outer interface optional, so that it can easily be replaced by the state-swap move."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# add another CV, and interface_set coming from that CV\n",
+    "cv_prime = paths.CoordinateFunctionCV(\"1-x\", lambda snap: 1.0-snap.xyz[0][0])\n",
+    "reverse_set = paths.VolumeInterfaceSet(cv_prime, 0.0, [0.2, 0.3, 0.4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New object to represent MS-outer interface\n",
+    "\n",
+    "We replace the implicit MS-outer interface with an explicit MS-outer interface. If the user wants an MS-outer, it must be made.\n",
+    "\n",
+    "In order to create the correct MS-outer ensemble, the MS-outer interface needs to create a volume for each interface set that it should combine. This means it requires the `InterfaceSet` objects decribed above. One approach to setting up the MS-outer interface is to explicitly create the volumes, and associate them with each interface:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "vol = interface_set.new_interface(lambda_i=0.5)\n",
+    "vol_prime = reverse_set.new_interface(lambda_i=0.45)\n",
+    "ms_outer = paths.MSOuterTISInterface(\n",
+    "    interface_sets=[interface_set, reverse_set],\n",
+    "    volumes=[vol, vol_prime],\n",
+    "    lambdas=[0.5, 0.45]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the `VolumeInterfaceSet` knows how to create its own volumes for a given $\\lambda$, there is a simpler way to make the equivalent MS-outer interface:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "simple_ms_outer = paths.MSOuterTISInterface.from_lambdas({\n",
+    "    interface_set: 0.5,\n",
+    "    reverse_set: 0.45\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making the MS-outer interface optional\n",
+    "\n",
+    "The MS-outer interface object is then given as an option to the `TransitionNetwork` for either MSTIS or MISTIS. The network can be build either with or without the MS-outer interface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "state_A = paths.CVDefinedVolume(cv, 0.0, 0.2)\n",
+    "state_B = paths.CVDefinedVolume(cv_prime, 0.0, 0.2)\n",
+    "\n",
+    "# with\n",
+    "network_with_msouter = paths.MSTISNetwork(\n",
+    "    [(state_A, interface_set), (state_B, reverse_set)],\n",
+    "    ms_outers=simple_ms_outer\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# without\n",
+    "network_without_msouter = paths.MSTISNetwork(\n",
+    "    [(state_A, interface_set), (state_B, reverse_set)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the the MS-outer ensemble in the MSTIS network provides a way to connect the transitions associated with the two interface sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<openpathsampling.ensemble.UnionEnsemble object at 0x1117dd350>: [<openpathsampling.high_level.transition.TISTransition object at 0x111783350>, <openpathsampling.high_level.transition.TISTransition object at 0x11175a650>]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print network_with_msouter.special_ensembles['ms_outer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'ms_outer' in network_without_msouter.special_ensembles"
+   ]
   }
  ],
  "metadata": {
