Finished wham notebook

--- a/wham.ipynb
+++ b/wham.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we plot that data "
+    "If we plot that data as it comes from the reverse crossing probabilities (as might be calculated by OPS), we get the following:"
    ]
   },
   {
@@ -67,6 +67,13 @@
     "plt.plot(index, exact, '-ok', lw=2)\n",
     "for (iface, style) in zip([iface1, iface2, iface3], ['-or', '-ob', '-og']):\n",
     "    plt.plot(index, iface, style)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also normalize those probabilities such that they all start at 1 (the normal way we plot crossing probabilities)."
    ]
   },
   {
@@ -219,6 +226,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we show the prepared dataframe:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -307,6 +321,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we plot the prepared data, showing the old data in dashed lines."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -339,7 +360,7 @@
    "source": [
     "## Combining the results from multiple interfaces\n",
     "\n",
-    "Of course, the fundamental goal is to join the data from all the interfaces into one result. This is done "
+    "Of course, the fundamental goal is to join the data from all the interfaces into one result. This is done (starting from the original input) with the following command:"
    ]
   },
   {
