Update network_input for Py3 (print function)

--- a/network_input.ipynb
+++ b/network_input.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "import openpathsampling as paths"
    ]
   },
@@ -166,9 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -179,15 +178,13 @@
     }
    ],
    "source": [
-    "print interface_set.lambdas"
+    "print(interface_set.lambdas)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -198,15 +195,13 @@
     }
    ],
    "source": [
-    "print interface_set_2.lambdas"
+    "print(interface_set_2.lambdas)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -217,7 +212,7 @@
     }
    ],
    "source": [
-    "print interface_set_5.lambdas"
+    "print(interface_set_5.lambdas)"
    ]
   },
   {
@@ -230,9 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -244,8 +237,8 @@
     }
    ],
    "source": [
-    "print interface_set_3.lambdas\n",
-    "print interface_set_4.lambdas"
+    "print(interface_set_3.lambdas)\n",
+    "print(interface_set_4.lambdas)"
    ]
   },
   {
@@ -260,9 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -282,9 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -304,9 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,7 +308,7 @@
     "try:\n",
     "    interface_set_2.new_interface(lambda_i=0.5)\n",
     "except AttributeError as e:\n",
-    "    print e"
+    "    print(e)"
    ]
   },
   {
@@ -336,9 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -366,9 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -380,7 +363,7 @@
    ],
    "source": [
     "outermost_lambda = interface_set.get_lambda(interface_set[-1])\n",
-    "print outermost_lambda"
+    "print(outermost_lambda)"
    ]
   },
   {
@@ -401,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# add another CV, and interface_set coming from that CV\n",
@@ -449,9 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "simple_ms_outer = paths.MSOuterTISInterface.from_lambdas({\n",
@@ -503,9 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -516,15 +493,13 @@
     }
    ],
    "source": [
-    "print network_with_msouter.special_ensembles['ms_outer']"
+    "print(network_with_msouter.special_ensembles['ms_outer'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -535,27 +510,69 @@
     }
    ],
    "source": [
-    "print 'ms_outer' in network_without_msouter.special_ensembles"
+    "print('ms_outer' in network_without_msouter.special_ensembles)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
