--- a/snapshot_features_1.ipynb
+++ b/snapshot_features_1.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -78,9 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create OpenMM engine trajectory\n",
@@ -111,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -124,7 +121,7 @@
     }
    ],
    "source": [
-    "print toy_trajectory[0].masses[0]"
+    "print(toy_trajectory[0].masses[0])"
    ]
   },
   {
@@ -141,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -156,9 +151,9 @@
     }
    ],
    "source": [
-    "print openmm_trajectory[0].masses[0]\n",
-    "print openmm_trajectory[0].masses[0].in_units_of(u.gram)\n",
-    "print openmm_trajectory[0].masses_per_mole[0]"
+    "print(openmm_trajectory[0].masses[0])\n",
+    "print(openmm_trajectory[0].masses[0].in_units_of(u.gram))\n",
+    "print(openmm_trajectory[0].masses_per_mole[0])"
    ]
   },
   {
@@ -173,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -186,7 +179,7 @@
     }
    ],
    "source": [
-    "print toy_trajectory[10].n_degrees_of_freedom"
+    "print(toy_trajectory[10].n_degrees_of_freedom)"
    ]
   },
   {
@@ -199,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -214,8 +205,8 @@
    ],
    "source": [
     "# this gives us 3 * n_atoms -- number of DOFs without constraints\n",
-    "print \"Possible dofs (3*N):\", 3 * len(openmm_trajectory[10].xyz)\n",
-    "print \"Actual dofs:\", openmm_trajectory[10].n_degrees_of_freedom"
+    "print(\"Possible dofs (3*N):\", 3 * len(openmm_trajectory[10].xyz))\n",
+    "print(\"Actual dofs:\", openmm_trajectory[10].n_degrees_of_freedom)"
    ]
   },
   {
@@ -254,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -291,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -332,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "openmm_instantaneous = [s.instantaneous_temperature / u.kelvin\n",
@@ -350,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -387,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -421,21 +402,63 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
