normed => density in plt.hist; disable Travis

--- a/transition_analysis_Abl.ipynb
+++ b/transition_analysis_Abl.ipynb
@@ -269,8 +269,8 @@
    ],
    "source": [
     "bin_spacing = np.arange(0, 60, 2)\n",
-    "plt.hist(state_1_segments.n_frames, bins=bin_spacing, normed=True, alpha=0.5, color='r');\n",
-    "plt.hist(state_2_segments.n_frames, bins=bin_spacing, normed=True, alpha=0.5, color='b');"
+    "plt.hist(state_1_segments.n_frames, bins=bin_spacing, density=True, alpha=0.5, color='r');\n",
+    "plt.hist(state_2_segments.n_frames, bins=bin_spacing, density=True, alpha=0.5, color='b');"
    ]
   },
   {
